Fixed alignment issues with menu button

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -10,7 +10,7 @@
   position: fixed;
   z-index: 100;
   display: grid;
-  grid-template-columns: 4rem 1fr 4rem;
+  grid-template-columns: 3rem 1fr 3rem;
   align-items: center;
   justify-content: center;
   width: 100%;
